# brief

./: CLAUDE.md  Cargo.toml  README.md
.claude/skills/review/: SKILL.md
docs/: design-decisions.md
docs/demos/: 2026-03-10-skills.md
docs/design/brainstorming/: 00-synthesis.md  01-friction-analysis.md  02-format-evolution.md  03-workflow-integration.md  04-competitive-landscape.md  05-radical-ux.md
examples/: sample.brief.md
src/: check.rs  init.rs  lib.rs  main.rs  model.rs  validate.rs
src/emit/: agents_md.rs  claude.rs  json.rs  mod.rs  prompt.rs  skill.rs
src/parse/: body.rs  frontmatter.rs  mod.rs
tests/: emit_tests.rs  parse_tests.rs  validate_tests.rs
tests/fixtures/: full.brief.md  malformed.brief.md  minimal.brief.md  skill.brief.md
