[package]
name = "brief-cli"
version = "0.1.0"
edition = "2021"
description = "Structured briefing format for AI coding agents"
license = "MIT"
repository = "https://github.com/jikanter/brief"
keywords = ["ai", "cli", "agents", "claude", "briefing"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "brief"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
glob = "0.3"
pulldown-cmark = "0.12"
colored = "2"
thiserror = "2"
anyhow = "1"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
